--- a/webservProject/www/index.html
+++ b/webservProject/www/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- link rel="stylesheet" href="css.css" -->
+    <link rel="stylesheet" href="css.css" >
     <title>Document</title>
 </head>
 <body>
     <h1>Prem Home Page</h1>
-    <!--img src="small_spipitku.webp"/ -->
+    <img src="small_spipitku.webp"/>
     <form method="post" action="test.php">
         <label for="fname"> Name: </label>
         <input type="text" id="fname" name="fname" />
