--- a/webservProject/www/index.html
+++ b/webservProject/www/index.html
@@ -8,7 +8,18 @@
 </head>
 <body>
     <h1>Prem Home Page</h1>
-    <img src="small_spipitku.webp"/>
+    <img src="small_spipitku.webp"/> <br />
+   <!--<img src="small_spipitku.webp"/> <br />
+    <img src="small_spipitku.webp"/> <br />
+    <img src="small_spipitku.webp"/> <br />
+    <img src="small_spipitku.webp"/> <br />
+    <img src="small_spipitku.webp"/> <br />
+    <img src="small_spipitku.webp"/> <br />
+    <img src="small_spipitku.webp"/> <br />
+    <img src="small_spipitku.webp"/> <br />
+    <img src="small_spipitku.webp"/> <br />
+    <img src="small_spipitku.webp"/> <br />
+    <img src="small_spipitku.webp"/> <br /> --> 
     <form method="post" action="test.php">
         <label for="fname"> Name: </label>
         <input type="text" id="fname" name="fname" />
