--- a/webservProject/www/index.html
+++ b/webservProject/www/index.html
@@ -20,10 +20,10 @@
     <img src="small_spipitku.webp"/> <br />
     <img src="small_spipitku.webp"/> <br />
     <img src="small_spipitku.webp"/> <br /> --> 
-    <form method="post" action="test.php">
+    <form method="POST" action="/upload">
         <label for="fname"> Name: </label>
-        <input type="text" id="fname" name="fname" />
-        <input type="submit" value="Submit" />
+        <input type="file" id="fname" name="fname" />
+        <input type="submit" value="Submit" formenctype="multipart/form-data"/>
     </form>
 </body>
 </html>
