--- a/webservProject/www/index.html
+++ b/webservProject/www/index.html
@@ -22,8 +22,14 @@
     <img src="small_spipitku.webp"/> <br /> --> 
     <form method="POST" action="/upload">
         <label for="fname"> Name: </label>
-        <input type="file" id="fname" name="fname" />
-        <input type="submit" value="Submit" formenctype="multipart/form-data"/>
+        <input type="text" id="fname" name="fname"/>
+        <label for="file"> File: </label>
+        <input type="file" id="file" name="file" />
+        <input type="submit" value="Submit" formenctype="multipart/form-data" />
     </form>
+
+    <!-- <script>
+        let 
+    </script> -->
 </body>
 </html>
