--- a/webservProject/www/index.html
+++ b/webservProject/www/index.html
@@ -4,32 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css.css" >
-    <title>Document</title>
+    <title>Webserv</title>
 </head>
 <body>
-    <h1>Prem Home Page</h1>
-    <img src="small_spipitku.webp"/> <br />
-   <!--<img src="small_spipitku.webp"/> <br />
-    <img src="small_spipitku.webp"/> <br />
-    <img src="small_spipitku.webp"/> <br />
-    <img src="small_spipitku.webp"/> <br />
-    <img src="small_spipitku.webp"/> <br />
-    <img src="small_spipitku.webp"/> <br />
-    <img src="small_spipitku.webp"/> <br />
-    <img src="small_spipitku.webp"/> <br />
-    <img src="small_spipitku.webp"/> <br />
-    <img src="small_spipitku.webp"/> <br />
-    <img src="small_spipitku.webp"/> <br /> --> 
-    <form method="POST" action="/upload">
-        <label for="fname"> Name: </label>
-        <input type="text" id="fname" name="fname"/>
-        <label for="file"> File: </label>
-        <input type="file" id="file" name="file" />
-        <input type="submit" value="Submit" formenctype="multipart/form-data" />
-    </form>
-
-    <!-- <script>
-        let 
-    </script> -->
+    <h1>Welcome to Webserv Project</h1>
+    <ul>
+        <li><a href="./cgi">cgi</a></li>
+        <li><a href="http://localhost:8081" > Prem </a></li>
+        <li><a href="http://localhost:8082" > Ton </a></li>
+        <li><a href="http://localhost:8083" > Pat </a></li>
+        <li><a href="http://localhost:8080/42" > redirect </a></li>
+    </ul>
 </body>
 </html>
