--- a/webservProject/www/cgi.html
+++ b/webservProject/www/cgi.html
@@ -24,7 +24,7 @@
         </form>
         <h2>Uploaded Files:</h2>
         <ul>
-    
+    <li><input type="button" value="delete" onclick="deleteFile('index (4).php')" > index (4).php</li>
         </ul>
     </body>
     </html>
